--- a/test-output/old/Suite2/classes.html
+++ b/test-output/old/Suite2/classes.html
@@ -4,61 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-<td>clo.AccountSettings</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>changePasswordCancel</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>captureSignature</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginSettings</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>toggleTrainingMode</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>toggleTrainingModeOff</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>switchYear</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>changePassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>teardown</td>
-<td>&nbsp;</td></tr>
-<tr>
->>>>>>> 15e8764a95539d65b4722d57f2c5b0ed2c38d4e7
 <td>clo.DatabaseSettings</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -66,9 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-=======
 <td>dbeditDonee</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dbaddOccupations</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -76,23 +23,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
->>>>>>> 15e8764a95539d65b4722d57f2c5b0ed2c38d4e7
 <td>dbEditCity</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbAddCity</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<<<<<<< HEAD
-<td>dbDeleteCity</td>
-=======
 <td>dbaddReferrals</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>dbDeleteDonee</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dbAddCity</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -132,11 +75,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbaddDonee</td>
+<td>dbaddBankRTN</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbaddBankRTN</td>
+<td>dbaddDonee</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -161,94 +104,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>dbaddEducationalInstitute</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>teardown</td>
-<td>&nbsp;</td></tr>
-<tr>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
-<td>clo.LoginPage</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<<<<<<< HEAD
-<td>updateAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>createApptSameTime</td>
-=======
-<td>loginPositive</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<<<<<<< HEAD
-<td>loginNegative</td>
-=======
-<td>checksReadyToPrint</td>
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>checksRegister</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>voidCheck</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>newMessageReply</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginPositive</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>createNewAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>checksReadyToPrint</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteMessage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteSecondAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<<<<<<< HEAD
-<td>newMessageSent</td>
-=======
-<td>deleteSecondAppointment</td>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
->>>>>>> 15e8764a95539d65b4722d57f2c5b0ed2c38d4e7
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
